--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="species_status">%1$s - %2$s</string>
 
     <string name="no_results">No results 😓</string>
+    <string name="retry">Retry</string>
 
 </resources>
